changes to mlearning

--- a/css/adelphi.css
+++ b/css/adelphi.css
@@ -113,7 +113,7 @@ h1.title,.rsa-red-text { color: #ab1c19; }
 
 #logo
 {
-    background-color: #444141;
+    background-color: #696A6C;
     position: absolute;
     left: 0;
     right: 0;
