--- a/css/adelphi.css
+++ b/css/adelphi.css
@@ -171,8 +171,8 @@ blockquote
     padding-top: .5em;    
 }
 
-
-#TOC {
+nav#contents
+{
     background: none repeat scroll 0 0 white;
     border: 1px solid black;
     counter-reset: toc;
