--- a/css/adelphi.css
+++ b/css/adelphi.css
@@ -112,9 +112,16 @@ blockquote
         width: 800px;
         margin: 0 auto;
     }
+}
 
 @media print
 {
+    a {color: black;}
+
+    #required-books p a:link:after, #suggested-books p a:link:after, *[id*='reading'] p a:link:after, .ref p a:link:after, *[id*='bibliography'] p a:link:after, #required-books p a:link:after:visited, #suggested-books p a:link:after:visited, *[id*='reading'] p a:link:after:visited, .ref p a:link:after:visited, *[id*='bibliography'] p a:link:after:visited, 
+     { content:" <" attr(href) "> "; }
+
+    #TOC {display: none;}
     body
     {
         font-size: 10pt;
