--- a/css/adelphi.css
+++ b/css/adelphi.css
@@ -1,3 +1,6 @@
+<!-- this css file gets inlined by the build script to make standalone html5 output
+that's why it has a style tag... -->
+
 <style type="text/css">
 body
 {
@@ -34,6 +37,11 @@ h1.title
 
 h1.title,.rsa-red-text { color: #ab1c19; }
 .rsa-red-bg { background-color: #ab1c19; }
+
+dt { font-weight: bold; }
+dt:after { content: ":"; }
+dd p {padding: 0; margin: 0; }
+
 
 a { text-decoration: none; }
 a img { border-style: none; }
