modified styles and templates, rebuilt courses with slightly modified look

--- a/css/adelphi.css
+++ b/css/adelphi.css
@@ -95,6 +95,14 @@ blockquote
     line-height: 1.5em;
 }
 
+*[id*='books'] img
+{
+    max-width: 150px;
+    max-height: 150px;
+    display: block;
+}
+
+
 .figure
 {
     border-top: 2px solid black;
@@ -214,5 +222,11 @@ nav#TOC
 #TOC ul li ul li ul { display: none; }
 
 #TOC h3 { text-align: center; }
+
+footer
+{
+    border-top: 2px dotted gray;
+    margin-top: 1em;
+}
 
 </style>
