--- a/css/adelphi.css
+++ b/css/adelphi.css
@@ -16,7 +16,8 @@ body, p, ul, ol, li, span, div
 }
 
 h1,h2,h3,h4,h5 { font-family: Ubuntu, "Gotham", "Futura", "Century Gothic", sans-serif; }
-h1{ font-size: 150%;  margin: 0px; margin-top: 2em; background-color: black; color: white; padding: .25em; }
+
+h1{ font-size: 150%;  margin: 0px; margin-top: 2em; }
 h2{ font-size: 130%; margin:0; margin-top: 1em; text-transform: uppercase;}
 h3{ font-size: 120%; font-weight: bold; }
 h4{ font-size: 110%; font-weight: bold; }
