--- a/css/adelphi.css
+++ b/css/adelphi.css
@@ -98,7 +98,7 @@ blockquote
     line-height: 1.5em;
 }
 
-*[id*='books'] img
+*[id*='books'] img, *[id*='texts'] img
 {
     max-width: 150px;
     max-height: 150px;
