some style changes, and syllabuses for summer courses

--- a/css/adelphi.css
+++ b/css/adelphi.css
@@ -19,8 +19,8 @@ h1,h2,h3,h4,h5 { font-family: Ubuntu, "Gotham", "Futura", "Century Gothic", sans
 
 h1{ font-size: 150%;  margin: 0px; margin-top: 2em;  text-transform: uppercase;}
 h2{ font-size: 130%; margin:0; margin-top: 1em;}
-h3{ font-size: 120%; font-weight: bold; }
-h4{ font-size: 110%; font-weight: bold; }
+h3{ font-size: 110%; font-weight: bold; }
+h4{ font-size: 100%; font-weight: bold; }
 h5 { padding: 0; margin: 0; font-size: 100%; font-style: italic; }
 
 h1.title 
@@ -229,9 +229,10 @@ blockquote
 }
 
 #logo h2 { color: black; }
-
+/*
 #class-sessions { counter-reset: week; }
-#class-sessions h3:before {
+#class-sessions h3:before 
+{
     counter-increment: week;
     content: "Week " counter(week) ": " 
 }
@@ -240,6 +241,7 @@ blockquote
 {
     margin-left: -1em;    
 }
+*/
 
 #class-sessions>section
 {
