--- a/css/adelphi.css
+++ b/css/adelphi.css
@@ -36,12 +36,24 @@ h1.title
     font-weight: bold; 
 }
 
-h1.title,.rsa-red-text { color: #ab1c19; }
+h1.title, .rsa-red-text { color: #ab1c19; }
 .rsa-red-bg { background-color: #ab1c19; }
 
-dt { font-weight: bold; }
 dt:after { content: ":"; }
 dd p {padding: 0; margin: 0; }
+dt 
+{
+    font-weight: bold;
+    clear: left;
+    float: left;
+    overflow: hidden;
+    text-align: right;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 160px;
+}
+
+
 
 
 a { text-decoration: none; }
