working on com301, many changes to layout, nav, footer, etc

--- a/content/_layouts/syllabus.html
+++ b/content/_layouts/syllabus.html
@@ -2,4 +2,5 @@
 layout: base
 ---
 {% include top-nav.html %}
-<div class="container mx-auto mt-2">{{content}}</div>
+<main class="container mx-auto mt-2">{{content}}</main>
+{% include footer.html %}
