--- a/content/_layouts/base.html
+++ b/content/_layouts/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100" lang="en">
+
 <head>
-<!--
+  <!--
     /\      | |    | |     | |   (_)
    /  \   __| | ___| |_ __ | |__  _
   / /\ \ / _` |/ _ \ | '_ \| '_ \| |
@@ -21,29 +22,21 @@
   <title>{{page.title}}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-  <meta name="date" content="$date$">
 
 
-  <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
+  <link rel="shortcut icon" type="image/ico" href="{{baseurl}}/img/favicon.ico">
 
-  <!--[if lt IE 9]>
-  <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link href="css/main.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="{{baseurl}}/css/main.css" rel="stylesheet">
+  
 
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
 
-<section id="syllabus" class="container-fluid p-0">
-    {{ content }}
-</section>
-
-
-{% include footer.html %}
+{{ content }}
 
 </body>
 </html>
