--- a/content/_layouts/bold.html
+++ b/content/_layouts/bold.html
@@ -1,61 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<!--
-    /\      | |    | |     | |   (_)
-   /  \   __| | ___| |_ __ | |__  _
-  / /\ \ / _` |/ _ \ | '_ \| '_ \| |
- / ____ \ (_| |  __/ | |_) | | | | |
-/_/    \_\__,_|\___|_| .__/|_| |_|_|
-                     | |
-                     |_|
- ______    _   _______        _
-|  ____|  | | |__   __|      | |
-| |__   __| |    | | ___  ___| |__
-|  __| / _` |    | |/ _ \/ __| '_ \
-| |___| (_| |    | |  __/ (__| | | |
-|______\__,_|    |_|\___|\___|_| |_|
-
--->
-
-  <title>{{page.title}}</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-  <meta name="date" content="$date$">
-
-
-  <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
-
-  <!--[if lt IE 9]>
-  <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link href="css/main.css" rel="stylesheet">
-<link href="css/bold.css" rel="stylesheet">
+---
+layout: base
+---
+<link href="{{baseurl}}/css/bold.css" rel="stylesheet">
 <style>
   .LeftTitle {
-    background-image: url('img/{{ page.title_img }}');
+    background-image: url('{{baseurl}}/img/{{ page.title_img }}');
   }
 </style>
 
-</head>
 
-<body>
-
+{% include top-nav.html %}
 <section class="container-fluid row">
-    <div class="col-md-2 gold">
-      <img src="img/au-brown.svg" alt="adelphi university" class="d-block img-fluid py-2">
-      <div class="LeftTitle"></div>
-    </div>
-    <div class="MainContent col-md-5">
-        {{ content }}
-    </div>
+<div class="col-md-2 gold">
+  <img src="{{baseurl}}/img/au-brown.svg" alt="adelphi university" class="d-block img-fluid py-2">
+  <div class="LeftTitle"></div>
+</div>
+<div class="MainContent col-md-5">
+  {{ content }}
+</div>
 </section>
-
-
 {% include footer.html %}
-
-</body>
-</html>
