--- a/content/css/bold.css
+++ b/content/css/bold.css
@@ -1,7 +1,7 @@
 body {
     background-image: url("../img/gold-gradient.svg");
-    background-repeat: repeat-y;
-    background-size: contain;
+    background-repeat: repeat;
+    background-size: cover;
 }
 
 .LeftTitle {
