--- a/content/_includes/com301-nav.html
+++ b/content/_includes/com301-nav.html
@@ -1,4 +1,4 @@
-<a href="{{baseurl}}/com-301/" 
+<a href="{{site.baseurl}}/com-301/" 
    class="d-block text-center my-2 fw-bold  link-underline link-underline-opacity-0">COM 301 - Spring '24</a>
 <div class="fw-bold">Professor</div>
 <div class="ps-4">Dr. John Drew</div>
