--- a/content/_layouts/bold.html
+++ b/content/_layouts/bold.html
@@ -1,10 +1,10 @@
 ---
 layout: base
 ---
-<link href="{{baseurl}}/css/bold.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/bold.css" rel="stylesheet">
 <style>
   .LeftTitle {
-    background-image: url('{{baseurl}}/img/{{ page.title_img }}');
+    background-image: url('{{site.baseurl}}/img/{{ page.title_img }}');
   }
 </style>
 
@@ -12,7 +12,7 @@ layout: base
 {% include top-nav.html %}
 <section class="container-fluid row">
 <div class="col-md-2 gold">
-  <img src="{{baseurl}}/img/au-brown.svg" alt="adelphi university" class="d-block img-fluid py-2">
+  <img src="{{site.baseurl}}/img/au-brown.svg" alt="adelphi university" class="d-block img-fluid py-2">
   <div class="LeftTitle"></div>
 </div>
 <div class="MainContent col-md-5">
