--- a/content/_includes/footer.html
+++ b/content/_includes/footer.html
@@ -3,20 +3,20 @@
         <div class="row d-flex align-items-end">
             <div class="col mb-2">
                 <div class="d-flex align-items-end">
-                    <img src="{{baserurl}}/img/au-white.png" alt="adelphi university" class="d-block" style="font-size: 32px">
+                    <img src="{{site.baserurl}}/img/au-white.png" alt="adelphi university" class="d-block" style="font-size: 32px">
                     <a class="HomeLink d-block px-2 text-light link-offset-2 link-offset-3-hover link-underline-light
-                                        link-underline-opacity-0 link-underline-opacity-100-hover" href="{{baserurl}}/index.html">
+                                        link-underline-opacity-0 link-underline-opacity-100-hover" href="{{site.baserurl}}/index.html">
                         Ed Tech Courses
                     </a>
                 </div>
 
             </div>
             <div class="col mb-2">
-                <a href="https://mixi.nyc"><img alt="mixi institute for stem and the imagination" src="{{baserurl}}/img/mixi.svg"
+                <a href="https://mixi.nyc"><img alt="mixi institute for stem and the imagination" src="{{site.baserurl}}/img/mixi.svg"
                         style="height: 32px;" /></a>
             </div>
             <div class="col mb-2">
-                <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img src="{{baserurl}}/img/cc-by-sa-hz.png"
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img src="{{site.baserurl}}/img/cc-by-sa-hz.png"
                         alt="creative commons share alike attribution license"></a>
             </div>
         </div>
@@ -26,7 +26,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-<script src="{{baserurl}}/js/boot_styles.js"></script>
+<script src="{{site.baserurl}}/js/boot_styles.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', addBootstrapStyles);
 </script>
