--- a/content/_layouts/base.html
+++ b/content/_layouts/base.html
@@ -24,12 +24,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-  <link rel="shortcut icon" type="image/ico" href="{{baseurl}}/img/favicon.ico">
+  <link rel="shortcut icon" type="image/ico" href="{{site.baseurl}}/img/favicon.ico">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link href="{{baseurl}}/css/main.css" rel="stylesheet">
+  <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
   
 
 </head>
