--- a/content/_layouts/com301.html
+++ b/content/_layouts/com301.html
@@ -2,11 +2,11 @@
 layout: base
 ---
 
-<link href="{{baseurl}}/css/bold.css" rel="stylesheet">
-<main class="h-100">
+<link href="{{site.baseurl}}/css/bold.css" rel="stylesheet">
+<main class="">
   <div class="container-fluid row h-100">
     <div class="col-md-2 gold" style="max-width: 300px;">
-      <img src="{{baseurl}}/img/au-brown.svg" alt="adelphi university" class="d-block img-fluid py-2">
+      <img src="{{site.baseurl}}/img/au-brown.svg" alt="adelphi university" class="d-block img-fluid py-2">
     
 
       <nav class="navbar-expand-md">
