added more weeks to com-301

--- a/content/_includes/com301-nav.html
+++ b/content/_includes/com301-nav.html
@@ -1,5 +1,6 @@
 <a href="{{site.baseurl}}/com-301/" 
    class="d-block text-center my-2 fw-bold  link-underline link-underline-opacity-0">COM 301 - Spring '24</a>
+
 <div class="fw-bold">Professor</div>
 <div class="ps-4">Dr. John Drew</div>
 
@@ -9,7 +10,7 @@
 
 <div class="fw-bold">Email / Phone:</div>
 <div class="ps-4"><a href="mailto:jdrew@adelphi.edu">jdrew@adelphi.edu</a></div>
-<div class="ps-4">516.877.4920</div>
+<div class="ps-4"><tel>516.877.4920</tel></div>
 
 <div class="fw-bold">Office hours:</div>
 <div class="ps-4">MW: 10:30-12:00 am</div>
@@ -17,10 +18,10 @@
 <hr>
 <strong>Course Links</strong>
 <div class="d-flex flex-column align-items-end">
-    <a class="nav-link d-block" href="week1.html">Week 1: Welcome</a>
+    <a class="nav-link active d-block" href="week1.html">Week 1: Welcome</a>
     <a class="nav-link d-block" href="week2.html">Week 2: School Segregation</a>
-    <a class="nav-link d-block disabled" href="week3.html">Week 3: Segregation Cont'd</a>
-    <a class="nav-link d-block disabled" href="week4.html">Week 4: Political Representation</a>
+    <a class="nav-link d-block" href="week3.html">Week 3: Segregation Cont'd</a>
+    <a class="nav-link d-block" href="week4.html">Week 4: Political Representation</a>
     <a class="nav-link d-block disabled" href="week5.html">Week 5: Representation Cont'd</a>
     <a class="nav-link d-block disabled" href="week6.html">Week 6: Climate Change</a>
     <a class="nav-link d-block disabled" href="week7.html">Week 7: Climate Cont'd</a>
@@ -35,5 +36,4 @@
     <hr class="px-2 w-100">
     <a class="nav-link d-block" href="syllabus.html">Syllabus</a>
     <a class="nav-link d-block" href="index.html">About</a>
-</div>
 </div>
