--- a/content/_layouts/com301.html
+++ b/content/_layouts/com301.html
@@ -7,23 +7,22 @@ layout: base
   <div class="container-fluid row h-100">
     <div class="col-md-2 gold" style="max-width: 300px;">
       <img src="{{site.baseurl}}/img/au-brown.svg" alt="adelphi university" class="d-block img-fluid py-2">
-    
-
       <nav class="navbar-expand-md">
         <button class="btn btn-secondary d-block d-md-none ms-auto" type="button" data-bs-toggle="collapse"
           data-bs-target="#classInfo" aria-controls="classInfo" aria-expanded="false" aria-label="Toggle navigation">
           <i class="bi bi-list"></i>
         </button>
-        
+      
         <div id="classInfo" class="collapse d-md-block">
           {% if page.sidenav %}
-            {% assign sidenav = page.sidenav %}
-            {% include {{sidenav}} %}
+          {% assign sidenav = page.sidenav %}
+          {% include {{sidenav}} %}
           {% endif %}
-
         </div>
-
+      
       </nav>
+
+    </div>
     
     <div class="MainContent col-md-5">
         {{ content }}
@@ -32,3 +31,29 @@ layout: base
 </main>
 
 {% include footer.html %}
+
+<script>
+function findACtiveURL() {
+  console.log("findActiveURL");
+  let links = document.getElementsByClassName("nav-link");
+  let currentUrl = window.location.href;
+  let baseUrl = "{{ site.baseurl }}"; // This is your Jekyll base URL from _config.yml
+
+  // Remove the base URL and the domain from the current URL to get the path
+  let pagePath = currentUrl.replace(window.location.origin + baseUrl, '');
+  console.log(pagePath);
+
+  for (let link of links) {
+    let linkPath = new URL(link.href).pathname; // Extracts the path from the full URL
+    if (linkPath === pagePath) {
+      link.classList.add('active'); 
+      link.classList.add('fw-bold'); 
+      // add --> before the link text
+      link.innerHTML = '<i class="bi bi-caret-right-fill"></i>' + link.innerHTML;
+    }
+  }
+
+
+}
+document.addEventListener('DOMContentLoaded', findACtiveURL);
+</script>
