--- a/docs/css/bold.css
+++ b/docs/css/bold.css
@@ -3,6 +3,9 @@ body {
     background-repeat: repeat;
     background-size: cover;
 }
+a {
+    text-decoration: none;
+}
 
 .LeftTitle {
     width: 100%;
