--- a/content/_layouts/com301.html
+++ b/content/_layouts/com301.html
@@ -2,11 +2,23 @@
 layout: base
 ---
 
-<link href="{{site.baseurl}}/css/bold.css" rel="stylesheet">
+{% if page.css %}
+  <link href="{{site.baseurl}}/{{page.css}}" rel="stylesheet">
+{% else %}
+  <link href="{{site.baseurl}}/css/bold.css" rel="stylesheet">
+{% endif %}
+
+{% if page.au_img %}
+  {% assign au_img = page.au_img %}
+{% else %}
+  {% assign au_img = "au-brown.svg" %}
+{% endif %}
+
+
 <main class="">
   <div class="container-fluid row h-100">
-    <div class="col-md-2 gold" style="max-width: 300px;">
-      <img src="{{site.baseurl}}/img/au-brown.svg" alt="adelphi university" class="d-block img-fluid py-2">
+    <div class="SideNav col-md-2" style="max-width: 300px;">
+      <img src="{{site.baseurl}}/img/{{au_img}}" alt="adelphi university" class="d-block img-fluid py-2">
       <nav class="navbar-expand-md">
         <button class="btn btn-secondary d-block d-md-none ms-auto" type="button" data-bs-toggle="collapse"
           data-bs-target="#classInfo" aria-controls="classInfo" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,8 +27,8 @@ layout: base
       
         <div id="classInfo" class="collapse d-md-block">
           {% if page.sidenav %}
-          {% assign sidenav = page.sidenav %}
-          {% include {{sidenav}} %}
+            {% assign sidenav = page.sidenav %}
+            {% include {{sidenav}} %}
           {% endif %}
         </div>
       
@@ -33,22 +45,34 @@ layout: base
 {% include footer.html %}
 
 <script>
+function pageName(link) {
+  let a = link.lastIndexOf("/") +1;
+  let b = link.lastIndexOf(".html") + 5;
+  if (b == 4) { // html not found
+    return "index.html"
+  }
+  return link.substring(a,b);
+}
+
 function findACtiveURL() {
   console.log("findActiveURL");
   let links = document.getElementsByClassName("nav-link");
   let currentUrl = window.location.href;
-  let baseUrl = "{{ site.baseurl }}"; // This is your Jekyll base URL from _config.yml
 
   // Remove the base URL and the domain from the current URL to get the path
-  let pagePath = currentUrl.replace(window.location.origin + baseUrl, '');
-  console.log(pagePath);
+  let pagePath = pageName(currentUrl);
+  console.log("page path:" + pagePath);
+  if (pagePath === "") {
+    pagePath = "index.html";
+  }
 
   for (let link of links) {
-    let linkPath = new URL(link.href).pathname; // Extracts the path from the full URL
+    let linkPath = pageName(link.href);
+    console.log("link:" + link.href);
+    console.log("link path:" + linkPath);
     if (linkPath === pagePath) {
       link.classList.add('active'); 
       link.classList.add('fw-bold'); 
-      // add --> before the link text
       link.innerHTML = '<i class="bi bi-caret-right-fill"></i>' + link.innerHTML;
     }
   }
