--- a/docs/css/bold.css
+++ b/docs/css/bold.css
@@ -6,6 +6,13 @@ body {
 a {
     text-decoration: none;
 }
+h1 {
+    text-align: center;
+    margin-bottom: 1em;
+}
+h3 {
+    font-size: 1.25rem;
+}
 
 .LeftTitle {
     width: 100%;
@@ -15,6 +22,9 @@ a {
     background-position-x: center;
 }
 
+.SideNav {
+    background-color: #ffb337;
+}
 
 .table-striped th {
     background-color: #ffb337;
