--- a/content/_includes/maker3-nav.html
+++ b/content/_includes/maker3-nav.html
@@ -1,26 +1,36 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <a href="{{site.baseurl}}/maker3/" 
-   class="d-block text-center my-2 fw-bold  link-underline link-underline-opacity-0">ESM 503 - Spring '24</a>
+   class="d-block text-center my-2 fw-bold text-white link-underline link-underline-opacity-0">ESM 503 - Spring '24</a>
+
+
+
+<strong class="text-white">Class Meetings</strong>
+<div class="d-flex flex-column align-items-start">
+    <div class="ps-3 pt-1">
+
+        <a class="nav-link text-white d-block" href="week1.html"><b><i class="bi bi-router"></i> Jan 23</b> Roots of Maker Ed</a>
+        <a class="nav-link text-white d-block" href="week2.html"><b><i class="bi bi-building"></i> Jan 30</b> LEGO Robotics</a>
+        <a class="nav-link text-white d-block disabled" href="week3.html"><b><i class="bi bi-router"></i> Feb 06</b> Play and Creativity</a>
+        <a class="nav-link text-white d-block disabled" href="week4.html"><b><i class="bi bi-building"></i> Feb 13</b> LEGO Rube Goldberg</a>
+        <a class="nav-link text-white d-block disabled" href="week5.html"><b><i class="bi bi-router"></i> Feb 20</b> Equity in the lab</a>
+        <a class="nav-link text-white d-block disabled" href="week6.html"><b><i class="bi bi-router"></i> Feb 27</b> Laser Cutter 1</a>
+        <a class="nav-link text-white d-block disabled" href="week7.html"><b><i class="bi bi-router"></i> Mar 05</b> Assessing maker projects</a>
+        <a class="nav-link text-white d-block disabled" href="week8.html"><b><i class="bi bi-building"></i> Mar 12</b> Laser Cut Animals</a>
+        <a class="nav-link text-white d-block disabled" href="spring-break.html"><b><i class="bi bi-emoji-sunglasses"></i> Mar</b> 19 Spring break, no class</a>
+        <a class="nav-link text-white d-block disabled" href="week10.html"><b><i class="bi bi-building"></i> Mar 26</b> Workshop Pitches</a>
+        <a class="nav-link text-white d-block disabled" href="week11.html"><b><i class="bi bi-router"></i> Apr 02</b> Workshop Pairs</a>
+        <a class="nav-link text-white d-block disabled" href="week12.html"><b><i class="bi bi-building"></i> Apr 09</b> Workshop Abstract</a>
+        <a class="nav-link text-white d-block disabled" href="week13.html"><b><i class="bi bi-router"></i> Apr 16</b> Workshop Lesson Plans</a>
+        <a class="nav-link text-white d-block disabled" href="week14.html"><b><i class="bi bi-router"></i> Apr 23</b> Studio</a>
+        <a class="nav-link text-white d-block disabled" href="week15.html"><b><i class="bi bi-building"></i> Apr 30</b> Studio</a>
+        <a class="nav-link text-white d-block disabled" href="week16.html"><b><i class="bi bi-building"></i> May 07</b> Studio</a>
+        <a class="nav-link text-white d-block disabled" href="week17.html"><b><i class="bi bi-building"></i> May 14</b> Mini Conference</a>
+    </div>
+
+    <a class="nav-link d-block text-white border-top border-white pt-2 mt-2 w-100 text-end" href="syllabus.html">Syllabus</a>
+    <a class="nav-link d-block text-white w-100 text-end" href="index.html">About</a>
+</div>
+
+<hr>
 
 <div class="text-white fw-bold">Instructor</div>
 <div class="text-white ps-4">Dr. Matthew X. Curinga</div>
@@ -34,30 +44,3 @@
 
 <div class="text-white fw-bold">Office hours:</div>
 <div class="text-white ps-4">Tues: 3pm-5pm</div>
-
-<hr>
-<strong class="text-white">Course Links</strong>
-<div class="d-flex flex-column align-items-end">
-    <a class="nav-link text-white d-block disabled" href="week1.html"><i class="bi bi-router"></i> Jan 23 Roots of Maker Ed</a>
-    <a class="nav-link text-white d-block disabled" href="week2.html"><i class="bi bi-building"></i> Jan 30 LEGO Robotics 1</a>
-    <a class="nav-link text-white d-block disabled" href="week3.html"><i class="bi bi-router"></i> Feb 06 Play and Creativity</a>
-    <a class="nav-link text-white d-block disabled" href="week4.html"><i class="bi bi-building"></i> Feb 13 LEGO Rube Goldberg</a>
-    <a class="nav-link text-white d-block disabled" href="week5.html"><i class="bi bi-router"></i> Feb 20 Equity in the lab</a>
-    <a class="nav-link text-white d-block disabled" href="week6.html"><i class="bi bi-router"></i> Feb 27 Laser Cutter 1</a>
-    <a class="nav-link text-white d-block disabled" href="week7.html"><i class="bi bi-router"></i> Mar 05 Assessing maker projects</a>
-    <a class="nav-link text-white d-block disabled" href="week8.html"><i class="bi bi-building"></i> Mar 12 Laser Cut Animals</a>
-    <a class="nav-link text-white d-block disabled" href="week9.html"><i class="bi bi-emoji-sunglasses"></i> Mar 19 Spring break</a>
-    <a class="nav-link text-white d-block disabled" href="week10.html"><i class="bi bi-building"></i> Mar 26 Workshop Pitches</a>
-    <a class="nav-link text-white d-block disabled" href="week11.html"><i class="bi bi-router"></i> Apr 02 Workshop Pairs</a>
-    <a class="nav-link text-white d-block disabled" href="week12.html"><i class="bi bi-building"></i> Apr 09 Workshop Abstract</a>
-    <a class="nav-link text-white d-block disabled" href="week13.html"><i class="bi bi-router"></i> Apr 16 Workshop Lesson Plans</a>
-    <a class="nav-link text-white d-block disabled" href="week14.html"><i class="bi bi-router"></i> Apr 23 Studio</a>
-    <a class="nav-link text-white d-block disabled" href="week15.html"><i class="bi bi-building"></i> Apr 30 Studio</a>
-    <a class="nav-link text-white d-block disabled" href="week16.html"><i class="bi bi-building"></i> May 07 Studio</a>
-    <a class="nav-link text-white d-block disabled" href="week17.html"><i class="bi bi-building"></i> May 14 Mini Conference</a>
-
-    <hr class="px-2 w-100">
-    <a class="nav-link d-block text-white" href="syllabus.html">Syllabus</a>
-    <a class="nav-link d-block text-white" href="index.html">About</a>
-</div>
-
