--- a/content/_layouts/com301.html
+++ b/content/_layouts/com301.html
@@ -17,7 +17,7 @@ layout: base
 
 <main class="">
   <div class="container-fluid row h-100">
-    <div class="SideNav col-md-2" style="max-width: 300px;">
+    <div class="SideNav col-md-2">
       <img src="{{site.baseurl}}/img/{{au_img}}" alt="adelphi university" class="d-block img-fluid py-2">
       <nav class="navbar-expand-md">
         <button class="btn btn-secondary d-block d-md-none ms-auto" type="button" data-bs-toggle="collapse"
