adding catapult lab

--- a/content/_includes/com301-nav.html
+++ b/content/_includes/com301-nav.html
@@ -17,7 +17,7 @@
 
 <hr>
 <strong>Course Links</strong>
-<div class="d-flex flex-column align-items-end">
+<div class="d-flex flex-column align-items-end me-2">
     <a class="nav-link active d-block" href="week1.html">Week 1: Welcome</a>
     <a class="nav-link d-block" href="week2.html">Week 2: School Segregation</a>
     <a class="nav-link d-block" href="week3.html">Week 3: Segregation Cont'd</a>
