--- a/content/_includes/maker3-nav.html
+++ b/content/_includes/maker3-nav.html
@@ -4,12 +4,12 @@
 
 
 <strong class="text-white">Class Meetings</strong>
-<div class="d-flex flex-column align-items-start">
+<div class="d-flex flex-column align-items-start mb-4">
     <div class="ps-3 pt-1">
 
         <a class="nav-link text-white d-block" href="week1.html"><b><i class="bi bi-router"></i> Jan 23</b> Roots of Maker Ed</a>
         <a class="nav-link text-white d-block" href="week2.html"><b><i class="bi bi-building"></i> Jan 30</b> LEGO Robotics</a>
-        <a class="nav-link text-white d-block disabled" href="week3.html"><b><i class="bi bi-router"></i> Feb 06</b> Play and Creativity</a>
+        <a class="nav-link text-white d-block" href="week3.html"><b><i class="bi bi-router"></i> Feb 06</b> Play and Creativity</a>
         <a class="nav-link text-white d-block disabled" href="week4.html"><b><i class="bi bi-building"></i> Feb 13</b> LEGO Rube Goldberg</a>
         <a class="nav-link text-white d-block disabled" href="week5.html"><b><i class="bi bi-router"></i> Feb 20</b> Equity in the lab</a>
         <a class="nav-link text-white d-block disabled" href="week6.html"><b><i class="bi bi-router"></i> Feb 27</b> Laser Cutter 1</a>
@@ -26,21 +26,19 @@
         <a class="nav-link text-white d-block disabled" href="week17.html"><b><i class="bi bi-building"></i> May 14</b> Mini Conference</a>
     </div>
 
-    <a class="nav-link d-block text-white border-top border-white pt-2 mt-2 w-100 text-end" href="syllabus.html">Syllabus</a>
-    <a class="nav-link d-block text-white w-100 text-end" href="index.html">About</a>
+    <a class="nav-link ps-2 d-block text-white pt-2 mt-2 w-100" href="syllabus.html">Syllabus</a>
+    <a class="nav-link ps-2 d-block text-white w-100" href="index.html">About</a>
 </div>
 
-<hr>
 
-<div class="text-white fw-bold">Instructor</div>
-<div class="text-white ps-4">Dr. Matthew X. Curinga</div>
-
-<div class="text-white fw-bold">Class Meetings</div>
-<div class="text-white ps-4">Online &amp; Tues 5pm-7pm</div>
-<div class="text-white ps-4">Adelphi Brooklyn (SFC) Room 7223</div>
-
-<div class="text-white fw-bold">Email:</div>
-<div class="text-white ps-4"><a href="mailto:mcuringa@adelphi.edu">mcuringa@adelphi.edu</a></div>
-
-<div class="text-white fw-bold">Office hours:</div>
-<div class="text-white ps-4">Tues: 3pm-5pm</div>
+<div class="mx-auto border-top border-white p-2">
+    <div class="text-white ps-2 fw-bold">Instructor</div>
+    <div class="text-white ps-4">Dr. Matthew X. Curinga</div>    
+    <div class="text-white ps-2 fw-bold">Class Meetings</div>
+    <div class="text-white ps-4">Online &amp; Tues 5pm-7pm</div>
+    <div class="text-white ps-4">Adelphi Brooklyn (SFC) Room 7223</div>    
+    <div class="text-white ps-2 fw-bold">Email:</div>
+    <div class="text-white ps-4"><a href="mailto:mcuringa@adelphi.edu">mcuringa@adelphi.edu</a></div>    
+    <div class="text-white ps-2 fw-bold">Office hours:</div>
+    <div class="text-white ps-4">Tues: 3pm-5pm</div>
+</div>
