--- a/docs/css/blueprint.css
+++ b/docs/css/blueprint.css
@@ -8,9 +8,9 @@ a {
     text-decoration: none;
 }
 h1 {
-    text-align: center;
-    margin-bottom: 1em;
-    margin-top: 2em
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+    font-size: 4rem;
 }
 h3 {
     font-size: 1.25rem;
