--- a/content/_layouts/com301.html
+++ b/content/_layouts/com301.html
@@ -22,7 +22,7 @@ layout: base
 
 <main class="">
   <div class="container-fluid row h-100 p-0 m-0">
-    <div class="SideNav col-md-2 p-0 m-0">
+    <div class="SideNav col-md-3 p-0 m-0">
       <img src="{{site.baseurl}}/img/{{au_img}}" alt="adelphi university" class="d-block img-fluid p-2 mx-auto">
       <nav class="navbar-expand-md">
         <button class="btn btn-secondary d-block d-md-none ms-auto mb-2 me-2" type="button" data-bs-toggle="collapse"
@@ -41,7 +41,7 @@ layout: base
 
     </div>
     
-    <div class="MainContent col-md-5">
+    <div class="MainContent col-xl-7 col-lg-9">
         {{ content }}
     </div>
   </div>
