--- a/content/_layouts/com301.html
+++ b/content/_layouts/com301.html
@@ -22,8 +22,9 @@ layout: base
 
 <main class="">
   <div class="container-fluid row h-100 p-0 m-0">
-    <div class="SideNav col-md-3 p-0 m-0">
-      <img src="{{site.baseurl}}/img/{{au_img}}" alt="adelphi university" class="d-block img-fluid p-2 mx-auto">
+    
+    <div class="SideNav col-md-3 col-xxl-2 p-0 m-0">
+      <img src="{{site.baseurl}}/img/{{au_img}}" alt="adelphi university" class="d-block img-fluid mt-2 p-4 mx-auto">
       <nav class="navbar-expand-md">
         <button class="btn btn-secondary d-block d-md-none ms-auto mb-2 me-2" type="button" data-bs-toggle="collapse"
           data-bs-target="#classInfo" aria-controls="classInfo" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,10 +42,12 @@ layout: base
 
     </div>
     
-    <div class="MainContent col-xl-7 col-lg-9">
+    <div class="MainContent col-xl-5 col-lg-7 col-md-9">
         {{ content }}
     </div>
   </div>
+
+
 </main>
 
 {% include footer.html %}
