updated professors in sidebar for com301

--- a/content/_includes/com301-nav.html
+++ b/content/_includes/com301-nav.html
@@ -1,8 +1,10 @@
 <a href="{{site.baseurl}}/com-301/" 
    class="d-block text-center my-2 fw-bold  link-underline link-underline-opacity-0">COM 301 - Spring '24</a>
 
-<div class="fw-bold">Professor</div>
-<div class="ps-4">Dr. John Drew</div>
+<div class="fw-bold">Professors</div>
+<div class="ps-4">Dr. Drew</div>
+<div class="ps-4">Dr. Uttamchandani</div>
+<div class="ps-4">Dr. Curinga</div>
 
 <div class="fw-bold">Class Meetings</div>
 <div class="ps-4">Gallagher Lab (2<sup>nd</sup> Fl Lib)</div>
