added a resources page

--- a/content/_includes/com301-nav.html
+++ b/content/_includes/com301-nav.html
@@ -36,6 +36,7 @@
     <a class="nav-link d-block disabled" href="week14.html">Week 14: Workshop 3</a>
     <a class="nav-link d-block disabled" href="week15.html">Week 15: Final Presentations</a>
     <hr class="px-2 w-100">
+    <a class="nav-link d-block" href="resources.html">Resources</a>
     <a class="nav-link d-block" href="syllabus.html">Syllabus</a>
     <a class="nav-link d-block" href="index.html">About</a>
 </div>
