--- a/content/_includes/maker3-nav.html
+++ b/content/_includes/maker3-nav.html
@@ -8,8 +8,8 @@
     <a class="nav-link text-white d-block" href="week1.html"><b><i class="bi bi-router"></i> Jan 23</b> Roots of Maker Ed</a>
     <a class="nav-link text-white d-block" href="week2.html"><b><i class="bi bi-building"></i> Jan 30</b> LEGO Robotics</a>
     <a class="nav-link text-white d-block" href="week3.html"><b><i class="bi bi-router"></i> Feb 06</b> Play and Creativity</a>
-    <a class="nav-link text-white d-block disabled" href="week4.html"><b><i class="bi bi-building"></i> Feb 13</b> LEGO Rube Goldberg</a>
-    <a class="nav-link text-white d-block disabled" href="week5.html"><b><i class="bi bi-router"></i> Feb 20</b> Equity in the lab</a>
+    <a class="nav-link text-white d-block" href="week4.html"><b><i class="bi bi-building"></i> Feb 13</b> LEGO Rube Goldberg</a>
+    <a class="nav-link text-white d-block" href="week5.html"><b><i class="bi bi-router"></i> Feb 20</b> Equity in the lab</a>
     <a class="nav-link text-white d-block disabled" href="week6.html"><b><i class="bi bi-router"></i> Feb 27</b> Laser Cutter 1</a>
     <a class="nav-link text-white d-block disabled" href="week7.html"><b><i class="bi bi-router"></i> Mar 05</b> Assessing maker projects</a>
     <a class="nav-link text-white d-block disabled" href="week8.html"><b><i class="bi bi-building"></i> Mar 12</b> Laser Cut Animals</a>
