expanded com301 layout to full screen

--- a/content/_layouts/com301.html
+++ b/content/_layouts/com301.html
@@ -42,7 +42,7 @@ layout: base
 
     </div>
     
-    <div class="MainContent col-xl-5 col-lg-7 col-md-9">
+    <div class="MainContent col-9">
         {{ content }}
     </div>
   </div>
