--- a/content/css/bold.css
+++ b/content/css/bold.css
@@ -1,4 +1,8 @@
-body {
+:fullscreen {
+    overflow: auto;
+}
+:fullscreen, body {
+    background-color: white;
     background-image: url("../img/gold-gradient.svg");
     background-repeat: repeat;
     background-size: cover;
