added assignments to com course

--- a/content/_includes/com301-nav.html
+++ b/content/_includes/com301-nav.html
@@ -38,5 +38,6 @@
     <hr class="px-2 w-100">
     <a class="nav-link d-block" href="resources.html">Resources</a>
     <a class="nav-link d-block" href="syllabus.html">Syllabus</a>
+    <a class="nav-link d-block" href="assignments.html">Assignments</a>
     <a class="nav-link d-block" href="index.html">About</a>
 </div>
