--- a/content/_includes/maker3-nav.html
+++ b/content/_includes/maker3-nav.html
@@ -10,9 +10,9 @@
     <a class="nav-link text-white d-block" href="week3.html"><b><i class="bi bi-router"></i> Feb 06</b> Play and Creativity</a>
     <a class="nav-link text-white d-block" href="week4.html"><b><i class="bi bi-building"></i> Feb 13</b> LEGO Rube Goldberg</a>
     <a class="nav-link text-white d-block" href="week5.html"><b><i class="bi bi-router"></i> Feb 20</b> Equity in the lab</a>
-    <a class="nav-link text-white d-block disabled" href="week6.html"><b><i class="bi bi-router"></i> Feb 27</b> Laser Cutter 1</a>
+    <a class="nav-link text-white d-block" href="week6.html"><b><i class="bi bi-router"></i> Feb 27</b> Goldberg Demo Day</a>
     <a class="nav-link text-white d-block disabled" href="week7.html"><b><i class="bi bi-router"></i> Mar 05</b> Assessing maker projects</a>
-    <a class="nav-link text-white d-block disabled" href="week8.html"><b><i class="bi bi-building"></i> Mar 12</b> Laser Cut Animals</a>
+    <a class="nav-link text-white d-block disabled" href="week8.html"><b><i class="bi bi-building"></i> Mar 12</b> Maker Learning Seminar</a>
     <a class="nav-link text-white d-block disabled" href="spring-break.html"><b><i class="bi bi-emoji-sunglasses"></i> Mar</b> 19 Spring break, no class</a>
     <a class="nav-link text-white d-block disabled" href="week10.html"><b><i class="bi bi-building"></i> Mar 26</b> Workshop Pitches</a>
     <a class="nav-link text-white d-block disabled" href="week11.html"><b><i class="bi bi-router"></i> Apr 02</b> Workshop Pairs</a>
