added readings to maker w.6

--- a/content/_includes/maker3-nav.html
+++ b/content/_includes/maker3-nav.html
@@ -11,9 +11,9 @@
     <a class="nav-link text-white d-block" href="week4.html"><b><i class="bi bi-building"></i> Feb 13</b> LEGO Rube Goldberg</a>
     <a class="nav-link text-white d-block" href="week5.html"><b><i class="bi bi-router"></i> Feb 20</b> Equity in the lab</a>
     <a class="nav-link text-white d-block" href="week6.html"><b><i class="bi bi-router"></i> Feb 27</b> Goldberg Demo Day</a>
-    <a class="nav-link text-white d-block disabled" href="week7.html"><b><i class="bi bi-router"></i> Mar 05</b> Assessing maker projects</a>
+    <a class="nav-link text-white d-block disabled" href="week7.html"><b><i class="bi bi-router"></i> Mar 05</b> Equity in the lab</a>
     <a class="nav-link text-white d-block disabled" href="week8.html"><b><i class="bi bi-building"></i> Mar 12</b> Maker Learning Seminar</a>
-    <a class="nav-link text-white d-block disabled" href="spring-break.html"><b><i class="bi bi-emoji-sunglasses"></i> Mar</b> 19 Spring break, no class</a>
+    <a class="nav-link text-white d-block disabled" href="spring-break.html"><b><i class="bi bi-emoji-sunglasses"></i> Mar 19</b> Spring break, no class</a>
     <a class="nav-link text-white d-block disabled" href="week10.html"><b><i class="bi bi-building"></i> Mar 26</b> Workshop Pitches</a>
     <a class="nav-link text-white d-block disabled" href="week11.html"><b><i class="bi bi-router"></i> Apr 02</b> Workshop Pairs</a>
     <a class="nav-link text-white d-block disabled" href="week12.html"><b><i class="bi bi-building"></i> Apr 09</b> Workshop Abstract</a>
