--- a/content/_includes/com301-nav.html
+++ b/content/_includes/com301-nav.html
@@ -25,7 +25,7 @@
     <a class="nav-link d-block" href="week3.html">Week 3: Segregation Cont'd</a>
     <a class="nav-link d-block" href="week4.html">Week 4: Political Representation</a>
     <a class="nav-link d-block" href="week5.html">Week 5: Representation Cont'd</a>
-    <a class="nav-link d-block disabled" href="week6.html">Week 6: Climate Change</a>
+    <a class="nav-link d-block" href="week6.html">Week 6: More CSS & HTML</a>
     <a class="nav-link d-block disabled" href="week7.html">Week 7: Climate Cont'd</a>
     <a class="nav-link d-block disabled" href="week8.html">Week 8: Case Study Recap</a>
     <a class="nav-link d-block disabled" href="week9.html">Week 9: Spring</a>
